--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - id: repository
+        uses: ASzc/change-string-case-action@v6
+        with:
+          string: ${{ github.repository }}
+
       - name: Login to GitHub Container Registry
         run: docker login ghcr.io -u ${{ github.actor }} --password ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/${{ inputs.service-name }}:latest -f ./deployments/${{ inputs.service-name }}.Dockerfile .      
+          docker build -t ghcr.io/${{ steps.repository.outputs.lowercase }}/${{ inputs.service-name }}:latest -f ./deployments/${{ inputs.service-name }}.Dockerfile .      
 
       - name: Push Docker image to GitHub Container Registry
         run: |
-          docker push ghcr.io/${{ github.repository }}/${{ inputs.service-name }}:latest
+          docker push ghcr.io/${{ steps.repository.outputs.lowercase }}/${{ inputs.service-name }}:latest
